# duck.voyage

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
.sqlx/: query-01f4726da8a67af1eb24018354e7401d54ecb4ecf95b31387210e96b7900153d.json  query-097876edbd0be8c1fbc8f5439ca3026f0ac3a821ba2b7b0cc320601e81a18e7f.json  query-11193083f1adc72dcf105195e4e4b52680f113dd1b2f8e8d6d2789428a69fb4e.json  query-11248abef7b15f62f25ff36b4aa2b52e004e5794609c195137a1024da6449aeb.json  query-11377f95102910d2e2fe4f0327e0050f2e31d6a92f8ef931c5a55a69ca3a0a0a.json  query-15cd14363e61a8b4af53728dceaf5c3f4d0a9531901ae0d0ef8cbba236563ddd.json  query-18a8034af33c5f794866d86afcd5c7a7631b1407b57639a35bf2cfcb5d31708d.json  query-1ec1680c58d1709c93af3d4c7b6fc9ba84030576c661bf88b5554dded25ebd64.json  query-2008b7f7abab3f2dc5d96dcc4e92917d3ba526de4816c6feebf869c0ae01d8e9.json  query-244ab92584f8c5c51650384c7656c59ecd4620763db4e03555e6ee0342e88627.json  query-259c368a32578eac632631c6cf3f579a75414cdf361298c14df008a4a79ce8a2.json  query-25cd5b43712a60d0a17981769eb31345be63b1e9fcba3d491f6ec9d8ddf7206d.json  query-26e1beb49ea7fc51edb979c03cd97de20cac629aa084336fbff7e0bcefd587c6.json  query-27c24a2d9b6b837e776146cf7bb7b47037eb822b9ddcb5d0149c4894d4bef230.json  query-2f15590da038c31dd1a7a9d025ecd6bf7628e180358a050fb0e65f8577da9717.json  query-2f2164ed05ad026e9bfde164f3dfb0d7ee9c145cc4565162aac1bacf28420a03.json  query-330ba42213a1995165221fedc55f4c07601231bddced6014466a38be128fb2de.json  query-35ba546e22922ca40e10b1cc4d807ad95255a0a9883025ef2e128ed145430587.json  query-35bd0c625e458b10863035611e7c61bab2d614bc54b245c79a43c04cc0678221.json  query-3717b8ee5e05118340c3ba2c9eb9f46562680950334e4ce8760ee50f650fe3f3.json  query-3b734daba7510c634490778d9fb5aac5c884aa5f6c3abc3433eeb6a64ddfe3a0.json  query-3bad6e273fe19751725cbde33e9157cfea1ea49601525a8f5deb9fcc68e1dda0.json  query-3c1019d040d54073e52bed9705380f628632781218645e5f5e42e04ae1407fbb.json  query-3ce18346b8b567b24058282228dbe0f6287d4ce2a2c74aa1665cf8b2d61b4853.json  query-3dad069c0011b21138beb031397815548800948bed9d40a0088cfcca5468f6bb.json  query-3efe3cb5642ecb0dca8d6b2ceb3056080aed6391cd650f4874ec6ee4defd1075.json  query-45b582a95f787253de25476c1960db2d4afd3770deedabf8d0bc62047461067a.json  query-4680894089a901f3651b7344a3d0177add52e5ad75fed193a45a82205fdbf718.json  query-5caffb5523cc0336ac6562e0aedf5c8b8ff68f9a0de9a07fbd33b78b47602e4b.json  query-649f0709f0fb048745b91992f0d78a40c51a1f3cbb356c85efb9cdc3313bb781.json  query-68c3ed4ba74aa4f1dec5ac2a5a9af0188ff746987e9fa2014903b7f9b9739329.json  query-6ced2f47328dfd4ff26cbd2d033f24c17ac91a9b41ec1316ebf8d328b3937476.json  query-71103f9552a8448ba11ff677792ba7a23bb57c1cdaae517cea0a8adf1ad87568.json  (+48 more)
crates/auth/: Cargo.toml
crates/auth/src/: apple.rs  error.rs  lib.rs  providers.rs  session.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  error.rs  lib.rs  photos.rs  repos.rs  rows.rs  summaries.rs
crates/web/: Cargo.toml  build.rs
crates/web/examples/: gen_test_jpeg.rs
crates/web/src/: config.rs  error.rs  main.rs  photo_pipeline.rs  qr.rs  state.rs  version.rs  views.rs
crates/web/src/handlers/: admin.rs  auth_routes.rs  duck.rs  flock.rs  me.rs  mod.rs  public.rs
dev/: keycloak-realm.json
(+24 files in other folders)
